--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -177,18 +177,19 @@
 }")
 
 (define_insn "*movqi_internal"
-  [(set (match_operand:QI 0 "nonimmediate_operand" "=r,r,r,m,r,*e")
-	(match_operand:QI 1 "move_operand" "r,J,m,r,*e,r"))]
+  [(set (match_operand:QI 0 "nonimmediate_operand" "=r,r,r, m, r,*f,*f")
+	(match_operand:QI 1 "move_operand"         "rO,J,m,rO,*f,rO,*f"))]
   "! memory_operand (operands[0], QImode)
    || ! memory_operand (operands[1], QImode)"
   "@
-   mov %0 = %1
+   mov %0 = %r1
    addl %0 = %1, r0
    ld1%O1 %0 = %1%P1
-   st1%Q0 %0 = %1%P0
+   st1%Q0 %0 = %r1%P0
    getf.sig %0 = %1
-   setf.sig %0 = %1"
-  [(set_attr "type" "A,A,M,M,M,M")])
+   setf.sig %0 = %r1
+   mov %0 = %1"
+  [(set_attr "type" "A,A,M,M,M,M,F")])
 
 (define_expand "movhi"
   [(set (match_operand:HI 0 "general_operand" "")
@@ -203,18 +204,19 @@
 }")
 
 (define_insn "*movhi_internal"
-  [(set (match_operand:HI 0 "nonimmediate_operand" "=r,r,r,m,r,*e")
-	(match_operand:HI 1 "move_operand" "r,J,m,r,*e,r"))]
+  [(set (match_operand:HI 0 "nonimmediate_operand" "=r,r,r, m, r,*f,*f")
+	(match_operand:HI 1 "move_operand"         "rO,J,m,rO,*f,rO,*f"))]
   "! memory_operand (operands[0], HImode)
    || !memory_operand (operands[1], HImode)"
   "@
-   mov %0 = %1
+   mov %0 = %r1
    addl %0 = %1, r0
    ld2%O1 %0 = %1%P1
-   st2%Q0 %0 = %1%P0
+   st2%Q0 %0 = %r1%P0
    getf.sig %0 = %1
-   setf.sig %0 = %1"
-  [(set_attr "type" "A,A,M,M,M,M")])
+   setf.sig %0 = %r1
+   mov %0 = %1"
+  [(set_attr "type" "A,A,M,M,M,M,F")])
 
 (define_expand "movsi"
   [(set (match_operand:SI 0 "general_operand" "")
@@ -229,22 +231,20 @@
 }")
 
 (define_insn "*movsi_internal"
-  [(set (match_operand:SI 0 "nonimmediate_operand" "=r,r,r,r,m,r,*e,*e,r,*f")
-	(match_operand:SI 1 "move_operand"       "r,J,i,m,r,*e,r,*e,*f,r"))]
+  [(set (match_operand:SI 0 "nonimmediate_operand" "=r,r,r,r, m, r,*f,*f")
+	(match_operand:SI 1 "move_operand"         "rO,J,i,m,rO,*f,rO,*f"))]
   "! memory_operand (operands[0], SImode)
    || ! memory_operand (operands[1], SImode)"
   "@
-  mov %0 = %1
+  mov %0 = %r1
   addl %0 = %1, r0
   movl %0 = %1
   ld4%O1 %0 = %1%P1
-  st4%Q0 %0 = %1%P0
+  st4%Q0 %0 = %r1%P0
   getf.sig %0 = %1
-  setf.sig %0 = %1
-  mov %0 = %1
-  getf.s %0 = %1
-  setf.s %0 = %1"
-  [(set_attr "type" "A,A,L,M,M,M,M,F,M,M")])
+  setf.sig %0 = %r1
+  mov %0 = %1"
+  [(set_attr "type" "A,A,L,M,M,M,M,F")])
 
 (define_expand "movdi"
   [(set (match_operand:DI 0 "general_operand" "")
@@ -287,25 +287,24 @@
     operands[1] = copy_to_mode_reg (DImode, operands[1]);
 }")
 
-;; ??? Emit stf8 for m/*e constraint.
 (define_insn "*movdi_internal"
-  [(set (match_operand:DI 0 "nonimmediate_operand" "=r,r,r,r,m,r,*e,*e,r,*f,r,*b")
-	(match_operand:DI 1 "move_operand"       "r,J,i,m,r,*e,r,*e,*f,r,*b,r"))]
+  [(set (match_operand:DI 0 "nonimmediate_operand" "=r,r,r,r, m, r,*f,*f,*f, m, r,*b")
+	(match_operand:DI 1 "move_operand"         "rO,J,i,m,rO,*f,rO,*f, m,*f,*b,rO"))]
   "! memory_operand (operands[0], DImode)
    || ! memory_operand (operands[1], DImode)"
   "@
-  mov %0 = %1
+  mov %0 = %r1
   addl %0 = %1, r0
   movl %0 = %1
   ld8%O1 %0 = %1%P1
-  st8%Q0 %0 = %1%P0
+  st8%Q0 %0 = %r1%P0
   getf.sig %0 = %1
-  setf.sig %0 = %1
+  setf.sig %0 = %r1
   mov %0 = %1
-  getf.d %0 = %1
-  setf.d %0 = %1
+  ldf8%O1 %0 = %1%P1
+  stf8%Q0 %0 = %1%P0
   mov %0 = %1
-  mov %0 = %1"
+  mov %0 = %r1"
   [(set_attr "type" "A,A,L,M,M,M,M,F,M,M,I,I")])
 
 (define_expand "load_fptr"
@@ -392,12 +391,9 @@
     operands[1] = copy_to_mode_reg (SFmode, operands[1]);
 }")
 
-;; ??? The r/m alternative is apparently needed because of paradoxical subregs,
-;; so it may no longer be necessary after scheduling is enabled.
-
 (define_insn "*movsf_internal"
-  [(set (match_operand:SF 0 "nonimmediate_operand" "=f,f,m,*r,f,*r,*r")
-	(match_operand:SF 1 "general_operand" "fG,m,fG,fG,*r,*r,m"))]
+  [(set (match_operand:SF 0 "nonimmediate_operand" "=f,f, m,*r, f,*r,*r, m")
+	(match_operand:SF 1 "general_operand"      "fG,m,fG,fG,*r,*r, m,*r"))]
   "! memory_operand (operands[0], SFmode)
    || ! memory_operand (operands[1], SFmode)"
   "@
@@ -407,8 +403,9 @@
   getf.s %0 = %F1
   setf.s %0 = %1
   mov %0 = %1
-  ld4%O1 %0 = %1"
-  [(set_attr "type" "F,M,M,M,M,A,M")])
+  ld4%O1 %0 = %1%P1
+  st4%Q0 %0 = %1%P0"
+  [(set_attr "type" "F,M,M,M,M,A,M,M")])
 
 (define_expand "movdf"
   [(set (match_operand:DF 0 "general_operand" "")
@@ -422,11 +419,9 @@
     operands[1] = copy_to_mode_reg (DFmode, operands[1]);
 }")
 
-;; ??? movsf has a r/m alternative, movdf doesn't.
-
 (define_insn "*movdf_internal"
-  [(set (match_operand:DF 0 "nonimmediate_operand" "=f,f,m,*r,f,*r")
-	(match_operand:DF 1 "general_operand" "fG,m,fG,fG,*r,*r"))]
+  [(set (match_operand:DF 0 "nonimmediate_operand" "=f,f, m,*r, f,*r,*r, m")
+	(match_operand:DF 1 "general_operand"      "fG,m,fG,fG,*r,*r, m,*r"))]
   "! memory_operand (operands[0], DFmode)
    || ! memory_operand (operands[1], DFmode)"
   "@
@@ -435,8 +430,10 @@
   stfd %0 = %F1%P0
   getf.d %0 = %F1
   setf.d %0 = %1
-  mov %0 = %1"
-  [(set_attr "type" "F,M,M,M,M,A")])
+  mov %0 = %1
+  ld8%O1 %0 = %1%P1
+  st8%Q0 %0 = %1%P0"
+  [(set_attr "type" "F,M,M,M,M,A,M,M")])
 
 (define_expand "movxf"
   [(set (match_operand:XF 0 "general_operand" "")
@@ -451,8 +448,8 @@
 }")
 
 (define_insn "*movxf_internal"
-  [(set (match_operand:XF 0 "nonimmediate_operand" "=f,f,m")
-	(match_operand:XF 1 "general_operand" "fG,m,fG"))]
+  [(set (match_operand:XF 0 "nonimmediate_operand" "=f,f, m")
+	(match_operand:XF 1 "general_operand"      "fG,m,fG"))]
   "! memory_operand (operands[0], XFmode)
    || ! memory_operand (operands[1], XFmode)"
   "@
@@ -485,8 +482,8 @@
   [(set_attr "type" "I")])
 
 (define_insn "extendsidi2"
-  [(set (match_operand:DI 0 "register_operand" "=r,*e")
-	(sign_extend:DI (match_operand:SI 1 "register_operand" "r,*e")))]
+  [(set (match_operand:DI 0 "register_operand" "=r,*f")
+	(sign_extend:DI (match_operand:SI 1 "register_operand" "r,*f")))]
   ""
   "@
    sxt4 %0 = %1
@@ -514,8 +511,8 @@
   [(set_attr "type" "I,M")])
 
 (define_insn "zero_extendsidi2"
-  [(set (match_operand:DI 0 "register_operand" "=r,r,*e")
-	(zero_extend:DI (match_operand:SI 1 "nonimmediate_operand" "r,m,*e")))]
+  [(set (match_operand:DI 0 "register_operand" "=r,r,*f")
+	(zero_extend:DI (match_operand:SI 1 "nonimmediate_operand" "r,m,*f")))]
   ""
   "@
    zxt4 %0 = %1
@@ -565,20 +562,20 @@
 
 (define_insn "floatdixf2"
   [(set (match_operand:XF 0 "register_operand" "=f")
-	(float:XF (match_operand:DI 1 "register_operand" "e")))]
+	(float:XF (match_operand:DI 1 "register_operand" "f")))]
   ""
   "fcvt.xf %0 = %1"
   [(set_attr "type" "F")])
 
 (define_insn "fix_truncsfdi2"
-  [(set (match_operand:DI 0 "register_operand" "=e")
+  [(set (match_operand:DI 0 "register_operand" "=f")
 	(fix:DI (match_operand:SF 1 "register_operand" "f")))]
   ""
   "fcvt.fx.trunc %0 = %1%B0"
   [(set_attr "type" "F")])
 
 (define_insn "fix_truncdfdi2"
-  [(set (match_operand:DI 0 "register_operand" "=e")
+  [(set (match_operand:DI 0 "register_operand" "=f")
 	(fix:DI (match_operand:DF 1 "register_operand" "f")))]
   ""
   "fcvt.fx.trunc %0 = %1%B0"
@@ -588,27 +585,27 @@
 
 (define_insn "floatunsdisf2"
   [(set (match_operand:SF 0 "register_operand" "=f")
-	(unsigned_float:SF (match_operand:DI 1 "register_operand" "e")))]
+	(unsigned_float:SF (match_operand:DI 1 "register_operand" "f")))]
   ""
   "fcvt.xuf.s %0 = %1%B0"
   [(set_attr "type" "F")])
 
 (define_insn "floatunsdidf2"
   [(set (match_operand:DF 0 "register_operand" "=f")
-	(unsigned_float:DF (match_operand:DI 1 "register_operand" "e")))]
+	(unsigned_float:DF (match_operand:DI 1 "register_operand" "f")))]
   ""
   "fcvt.xuf.d %0 = %1%B0"
   [(set_attr "type" "F")])
 
 (define_insn "fixuns_truncsfdi2"
-  [(set (match_operand:DI 0 "register_operand" "=e")
+  [(set (match_operand:DI 0 "register_operand" "=f")
 	(unsigned_fix:DI (match_operand:SF 1 "register_operand" "f")))]
   ""
   "fcvt.fxu.trunc %0 = %1%B0"
   [(set_attr "type" "F")])
 
 (define_insn "fixuns_truncdfdi2"
-  [(set (match_operand:DI 0 "register_operand" "=e")
+  [(set (match_operand:DI 0 "register_operand" "=f")
 	(unsigned_fix:DI (match_operand:DF 1 "register_operand" "f")))]
   ""
   "fcvt.fxu.trunc %0 = %1%B0"
@@ -920,9 +917,9 @@
 ;; ??? Could add maddsi3 patterns patterned after the madddi3 patterns.
 
 (define_insn "*mulsi3_internal"
-  [(set (match_operand:SI 0 "register_operand" "=e")
-	(mult:SI (match_operand:SI 1 "register_operand" "e")
-		 (match_operand:SI 2 "nonmemory_operand" "e")))]
+  [(set (match_operand:SI 0 "register_operand" "=f")
+	(mult:SI (match_operand:SI 1 "register_operand" "f")
+		 (match_operand:SI 2 "nonmemory_operand" "f")))]
   ""
   "xma.l %0 = %1, %2, f0%B0"
   [(set_attr "type" "F")])
@@ -1065,9 +1062,9 @@
   [(set_attr "type" "A")])
 
 (define_insn "muldi3"
-  [(set (match_operand:DI 0 "register_operand" "=e")
-	(mult:DI (match_operand:DI 1 "register_operand" "e")
-		 (match_operand:DI 2 "register_operand" "e")))]
+  [(set (match_operand:DI 0 "register_operand" "=f")
+	(mult:DI (match_operand:DI 1 "register_operand" "f")
+		 (match_operand:DI 2 "register_operand" "f")))]
   ""
   "xma.l %0 = %1, %2, f0%B0"
   [(set_attr "type" "F")])
@@ -1084,10 +1081,10 @@
 ;; ??? Maybe we should change how adds are canonicalized.
 
 (define_insn "*madddi3"
-  [(set (match_operand:DI 0 "register_operand" "=e")
-	(plus:DI (mult:DI (match_operand:DI 1 "register_operand" "e")
-			  (match_operand:DI 2 "register_operand" "e"))
-		 (match_operand:DI 3 "register_operand" "e")))
+  [(set (match_operand:DI 0 "register_operand" "=f")
+	(plus:DI (mult:DI (match_operand:DI 1 "register_operand" "f")
+			  (match_operand:DI 2 "register_operand" "f"))
+		 (match_operand:DI 3 "register_operand" "f")))
    (clobber (match_scratch:DI 4 "=X"))]
   ""
   "xma.l %0 = %1, %2, %3%B0"
@@ -1103,11 +1100,11 @@
 
 (define_insn "*madddi3_elim"
   [(set (match_operand:DI 0 "register_operand" "=&r")
-	(plus:DI (plus:DI (mult:DI (match_operand:DI 1 "register_operand" "e")
-				   (match_operand:DI 2 "register_operand" "e"))
-			  (match_operand:DI 3 "register_operand" "e"))
+	(plus:DI (plus:DI (mult:DI (match_operand:DI 1 "register_operand" "f")
+				   (match_operand:DI 2 "register_operand" "f"))
+			  (match_operand:DI 3 "register_operand" "f"))
 		 (match_operand:DI 4 "nonmemory_operand" "rI")))
-   (clobber (match_scratch:DI 5 "=e"))]
+   (clobber (match_scratch:DI 5 "=f"))]
   "reload_in_progress"
   "#"
   [(set_attr "type" "unknown")])
@@ -1136,22 +1133,22 @@
 ;; to generate them.
 
 (define_insn "smuldi3_highpart"
-  [(set (match_operand:DI 0 "register_operand" "=e")
+  [(set (match_operand:DI 0 "register_operand" "=f")
 	(truncate:DI
 	 (lshiftrt:TI
-	  (mult:TI (sign_extend:TI (match_operand:DI 1 "register_operand" "e"))
-		   (sign_extend:TI (match_operand:DI 2 "register_operand" "e")))
+	  (mult:TI (sign_extend:TI (match_operand:DI 1 "register_operand" "f"))
+		   (sign_extend:TI (match_operand:DI 2 "register_operand" "f")))
 	  (const_int 64))))]
   ""
   "xma.h %0 = %1, %2, f0%B0"
   [(set_attr "type" "F")])
 
 (define_insn "umuldi3_highpart"
-  [(set (match_operand:DI 0 "register_operand" "=e")
+  [(set (match_operand:DI 0 "register_operand" "=f")
 	(truncate:DI
 	 (lshiftrt:TI
-	  (mult:TI (zero_extend:TI (match_operand:DI 1 "register_operand" "e"))
-		   (zero_extend:TI (match_operand:DI 2 "register_operand" "e")))
+	  (mult:TI (zero_extend:TI (match_operand:DI 1 "register_operand" "f"))
+		   (zero_extend:TI (match_operand:DI 2 "register_operand" "f")))
 	  (const_int 64))))]
   ""
   "xma.hu %0 = %1, %2, f0%B0"
@@ -1735,9 +1732,9 @@
 ;; ::::::::::::::::::::
 
 (define_insn "anddi3"
-  [(set (match_operand:DI 0 "register_operand" "=r,*e")
-	(and:DI (match_operand:DI 1 "register_operand" "%r,*e")
-		(match_operand:DI 2 "reg_or_8bit_operand" "rK,*e")))]
+  [(set (match_operand:DI 0 "register_operand" "=r,*f")
+	(and:DI (match_operand:DI 1 "register_operand" "%r,*f")
+		(match_operand:DI 2 "reg_or_8bit_operand" "rK,*f")))]
   ""
   "@
    and %0 = %2, %1
@@ -1745,9 +1742,9 @@
   [(set_attr "type" "A,F")])
 
 (define_insn "*andnot"
-  [(set (match_operand:DI 0 "register_operand" "=r,*e")
-	(and:DI (not:DI (match_operand:DI 1 "register_operand" "r,*e"))
-		(match_operand:DI 2 "reg_or_8bit_operand" "rK,*e")))]
+  [(set (match_operand:DI 0 "register_operand" "=r,*f")
+	(and:DI (not:DI (match_operand:DI 1 "register_operand" "r,*f"))
+		(match_operand:DI 2 "reg_or_8bit_operand" "rK,*f")))]
   ""
   "@
    andcm %0 = %2, %1
@@ -1755,9 +1752,9 @@
   [(set_attr "type" "A,F")])
 
 (define_insn "iordi3"
-  [(set (match_operand:DI 0 "register_operand" "=r,*e")
-	(ior:DI (match_operand:DI 1 "register_operand" "%r,*e")
-		(match_operand:DI 2 "reg_or_8bit_operand" "rK,*e")))]
+  [(set (match_operand:DI 0 "register_operand" "=r,*f")
+	(ior:DI (match_operand:DI 1 "register_operand" "%r,*f")
+		(match_operand:DI 2 "reg_or_8bit_operand" "rK,*f")))]
   ""
   "@
    or %0 = %2, %1
@@ -1765,9 +1762,9 @@
   [(set_attr "type" "A,F")])
 
 (define_insn "xordi3"
-  [(set (match_operand:DI 0 "register_operand" "=r,*e")
-	(xor:DI (match_operand:DI 1 "register_operand" "%r,*e")
-		(match_operand:DI 2 "reg_or_8bit_operand" "rK,*e")))]
+  [(set (match_operand:DI 0 "register_operand" "=r,*f")
+	(xor:DI (match_operand:DI 1 "register_operand" "%r,*f")
+		(match_operand:DI 2 "reg_or_8bit_operand" "rK,*f")))]
   ""
   "@
    xor %0 = %2, %1
@@ -3000,7 +2997,7 @@
 		      (return)
 		      (pc)))]
   "ia64_direct_return ()"
-  "(%%J0) br.ret%+.many rp"
+  "(%J0) br.ret%+.many rp"
   [(set_attr "type" "B")
    (set_attr "predicable" "no")])
 
@@ -3012,7 +3009,7 @@
 		      (pc)
 		      (return)))]
   "ia64_direct_return ()"
-  "(%%j0) br.ret%+.many rp"
+  "(%j0) br.ret%+.many rp"
   [(set_attr "type" "B")
    (set_attr "predicable" "no")])
 
@@ -3132,13 +3129,13 @@
 
 (define_insn "fr_spill"
   [(set (match_operand:XF 0 "memory_operand" "=m")
-	(unspec:XF [(match_operand:XF 1 "register_operand" "f*e")] 3))]
+	(unspec:XF [(match_operand:XF 1 "register_operand" "f")] 3))]
   ""
   "stf.spill %0 = %1%P0"
   [(set_attr "type" "M")])
 
 (define_insn "fr_restore"
-  [(set (match_operand:XF 0 "register_operand" "=f*e")
+  [(set (match_operand:XF 0 "register_operand" "=f")
 	(unspec:XF [(match_operand:XF 1 "memory_operand" "m")] 4))]
   ""
   "ldf.fill %0 = %1%P1"
@@ -3196,28 +3193,14 @@
   [(unspec_volatile [(const_int 0)] 5)
    (use (match_operand:DI 0 "register_operand" "r"))]
   ""
-  "flushrs\;			\
-   mov r19=ar.rsc\;		\
-   ;;\;				\
-   and r19=0x1c,r19\;		\
-   ;;\;				\
-   mov ar.rsc=r19\;		\
-   ;;\;				\
-   mov ar.bspstore=%0\;		\
-   ;;\;				\
-   or r19=0x3,r19\;		\
-   ;;\;				\
-   loadrs\;			\
-   invala\;			\
-   ;;\;				\
-   mov ar.rsc=r19\;"
+  "flushrs\;mov r19=ar.rsc\;;;\;and r19=0x1c,r19\;;;\;mov ar.rsc=r19\;;;\;mov ar.bspstore=%0\;;;\;or r19=0x3,r19\;;;\;loadrs\;invala\;;;\;mov ar.rsc=r19"
   [(set_attr "type" "unknown")
    (set_attr "predicable" "no")])
 
 (define_insn "flushrs"
   [(unspec [(const_int 0)] 21)]
   ""
-  ";; \; flushrs"
+  ";;\;flushrs"
   [(set_attr "type" "M")])
 
 ;; ::::::::::::::::::::
