Test for PR java.lang/258: 	* libjava.lang/Class_1.java: New file. 	* libjava.lang/Class_1.out: New file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34532 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2000-06-13  Warren Levy  <warrenl@cygnus.com>
+
+	Test for PR java.lang/258:
+	* libjava.lang/Class_1.java: New file.
+	* libjava.lang/Class_1.out: New file.
+
 2000-05-29  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* libjava.lang/PR242.java: New file. PR gcj/242.
