* tree.h (TYPE_USER_ALIGN, DECL_USER_ALIGN): Define. 	(struct tree_type, struct tree_decl): Add user_align member. 	* stor-layout.c (layout_decl): Set DECL_USER_ALIGN. 	(place_union_field): If BIGGEST_FIELD_ALIGNMENT is defined 	and DECL_USER_ALIGN 0, cap alignment to this value. 	(place_field): Likewise. 	(finalize_type_size): Set TYPE_USER_ALIGN. 	(layout_type): Likewise. 	(initialize_sizetypes): Likewise. 	* c-common.c (decl_attributes): Set TYPE_USER_ALIGN resp. 	DECL_USER_ALIGN to 1. 	* c-decl.c (duplicate_decls): Set DECL_USER_ALIGN. 	(xfer_tag): Set TYPE_USER_ALIGN. 	(finish_struct): Set DECL_USER_ALIGN resp. TYPE_USER_ALIGN. 	(finish_enum): Likewise. 	* stmt.c (expand_decl): Set DECL_USER_ALIGN. 	(expand_anon_union_decl): Likewise. 	* tree.c (make_node): Set DECL_USER_ALIGN resp. TYPE_USER_ALIGN. 	(build_index_type): Set TYPE_USER_ALIGN. 	(build_range_type): Likewise. 	(build_common_tree_nodes_2): Likewise. 	* tm.texi (BIGGEST_FIELD_ALIGNMENT): Document the changed meaning.
ch/:
	* decl.c (init_decl_processing): Set TYPE_USER_ALIGN.
	(layout_enum): Set DECL_USER_ALIGN resp. TYPE_USER_ALIGN.
	* typeck.c (layout_chill_range_type): Set TYPE_USER_ALIGN.
	(apply_chill_field_layout): Set DECL_USER_ALIGN.
	(layout_chill_struct_type): Set TYPE_USER_ALIGN.

cp/:
	* class.c (build_secondary_vtable): Set DECL_USER_ALIGN.
	(check_bitfield_decl, check_field_decl): Likewise.
	(build_vtbl_or_vbase_field, build_base_field): Likewise.
	(layout_class_type): Set DECL_USER_ALIGN resp. CLASSTYPE_USER_ALIGN.
	* decl.c (record_unknown_type): Set TYPE_USER_ALIGN.
	(xfer_tag, finish_enum): Likewise.
	* decl2.c (finish_builtin_type): Likewise.
	* init.c (init_init_processing): Likewise.
	* pt.c (instantiate_class_template): Likewise.
	* rtti.c (get_tinfo_decl, synthesize_tinfo_fn): Set DECL_USER_ALIGN.
	* cp-tree.h (struct lang_type): Add user_align member.
	(CLASSTYPE_USER_ALIGN): Define.

f/:
	* com.c (ffecom_transform_common_): Set DECL_USER_ALIGN.
	(ffecom_transform_equiv_, ffeco

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,28 @@
+2000-06-13  Jakub Jelinek  <jakub@redhat.com>
+
+	* tree.h (TYPE_USER_ALIGN, DECL_USER_ALIGN): Define.
+	(struct tree_type, struct tree_decl): Add user_align member.
+	* stor-layout.c (layout_decl): Set DECL_USER_ALIGN.
+	(place_union_field): If BIGGEST_FIELD_ALIGNMENT is defined
+	and DECL_USER_ALIGN 0, cap alignment to this value.
+	(place_field): Likewise.
+	(finalize_type_size): Set TYPE_USER_ALIGN.
+	(layout_type): Likewise.
+	(initialize_sizetypes): Likewise.
+	* c-common.c (decl_attributes): Set TYPE_USER_ALIGN resp.
+	DECL_USER_ALIGN to 1.
+	* c-decl.c (duplicate_decls): Set DECL_USER_ALIGN.
+	(xfer_tag): Set TYPE_USER_ALIGN.
+	(finish_struct): Set DECL_USER_ALIGN resp. TYPE_USER_ALIGN.
+	(finish_enum): Likewise.
+	* stmt.c (expand_decl): Set DECL_USER_ALIGN.
+	(expand_anon_union_decl): Likewise.
+	* tree.c (make_node): Set DECL_USER_ALIGN resp. TYPE_USER_ALIGN.
+	(build_index_type): Set TYPE_USER_ALIGN.
+	(build_range_type): Likewise.
+	(build_common_tree_nodes_2): Likewise.
+	* tm.texi (BIGGEST_FIELD_ALIGNMENT): Document the changed meaning.
+
 2000-06-13  Andreas Jaeger  <aj@suse.de>
 
 	* configure.in: Use --enable-checking=misc,tree,gc by default if
