--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2000-06-13  Jakub Jelinek  <jakub@redhat.com>
+
+	* typeck.c (build_java_array_type): Set TYPE_USER_ALIGN.
+	* parse.y (java_complete_class): Set DECL_USER_ALIGN.
+	* parse.c: Rebuilt.
+
 2000-06-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* decl.c (create_primitive_vtable): Prototype.
