--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jun 14 09:25:57 2000  Jeffrey A Law  (law@cygnus.com)
+
+	* configure.in: Revert AC_TYPE_GETGROUPS patch from June 13.
+	* configure, config.in: Rebuilt.
+
 Wed Jun 14 03:39:58 EDT 2000  John Wehle  (john@feith.com)
 
 	* ifcvt.c (EDGE_COMPLEX): Move definition ...
