* gcc.c (main): Quiet compiler warnings.  argv is assumed to be         writable in parts of the GCC code.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34550 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2000-06-14  David O'Brien  <obrien@FreeBSD.org>
 
+	* gcc.c (main): Quiet compiler warnings.  argv is assumed to be
+	writable in parts of the GCC code.
+
 	* config/elfos.h (ASM_GENERATE_INTERNAL_LABEL): Make printf
 	specification match cast.
 
