* c-common.def: New file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34553 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -37,7 +37,7 @@
 	(STMT_LINENO): Likewise.
 	(STMT_LINENO_FOR_FN_P): Likewise.
 
-	* c-common.def: Added SRCLOC, SIZEOF_EXPR, ARROW_EXPR,
+	* c-common.def: New file. Added SRCLOC, SIZEOF_EXPR, ARROW_EXPR,
 	ALIGNOF_EXPR, EXPR_STMT, COMPOUND_STMT, DECL_STMT, IF_STMT,
 	FOR_STMT, WHILE_STMT, DO_STMT, RETURN_STMT, BREAK_STMT,
 	CONTINUE_STMT, SWITCH_STMT, GOTO_STMT, LABEL_STMT, ASM_STMT,
