* g++.old-deja/g++.other/inline12.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34554 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-14  Hans-Peter Nilsson  <hp@axis.com>
+
+	* g++.old-deja/g++.other/inline12.C: New test.
+
 2000-06-13  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.old-deja/g++.other/eh1.C: New test.
