* rs6000.c (expand_block_move): Fix typo in earlier change. 	(print_operand): Remove unused variables neg and op. 	(toc_hash_mark_entry): Fix prototype.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34555 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-06-14  David Edelsohn  <edelsohn@gnu.org>
+
+	* rs6000.c (expand_block_move): Fix typo in earlier change.
+	(print_operand): Remove unused variables neg and op.
+	(toc_hash_mark_entry): Fix prototype.
+
 2000-06-14  Benjamin Chelf  <chelf@cabriolet.stanford.edu>
 
 	* c-common.h (IF_COND): Moved here from cp/cp-tree.h.
