* print-rtl.c (print_rtx): Emit space before mem alias set.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34556 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-14  Richard Henderson  <rth@cygnus.com>
+
+	* print-rtl.c (print_rtx): Emit space before mem alias set.
+
 2000-06-14  David Edelsohn  <edelsohn@gnu.org>
 
 	* rs6000.c (expand_block_move): Fix typo in earlier change.
