--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2000-06-14  Richard Henderson  <rth@cygnus.com>
 
+	* conflict.c (conflict_graph_compute): Don't look for REG_INC.
+
+	* config/ia64/ia64.c (ia64_setup_incoming_varargs): Don't emit
+	auto-inc code.
+
 	* print-rtl.c (print_rtx): Emit space before mem alias set.
 
 2000-06-14  David Edelsohn  <edelsohn@gnu.org>
