--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-14  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/20000614-1.c: New test.
+	* gcc.dg/20000614-2.c: New test.
+
 2000-06-14  Hans-Peter Nilsson  <hp@axis.com>
 
 	* g++.old-deja/g++.other/inline12.C: New test.
