--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jun 15 14:03:14 2000  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* ste.c (gbe_block): Constify.
+
 2000-06-13  Jakub Jelinek  <jakub@redhat.com>
 
 	* com.c (ffecom_transform_common_): Set DECL_USER_ALIGN.
