--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-15  Mark Mitchell  <mark@codesourcery.com>
+
+	* cp-tree.h (DECL_PENDING_INLINE_P): Relax checking.
+
 2000-06-14  Benjamin Chelf  <chelf@cabriolet.stanford.edu>
 
 	* cp-tree.h (IF_COND): Move to c-common.h.
